fix(storybook): Refactor Storybook theme component

--- a/starter-kits/tailwind/apps/storybook/patterns/00-base/layout.stories.mdx
+++ b/starter-kits/tailwind/apps/storybook/patterns/00-base/layout.stories.mdx
@@ -1,7 +1,5 @@
-import { Meta, Title, Subtitle, Heading, Subheading } from '@storybook/addon-docs';
-import { Source } from '@storybook/components';
+import { Meta, Title, Subtitle, Subheading } from '@storybook/addon-docs';
 import LinkTo from '@storybook/addon-links/react';
-import dedent from 'ts-dedent';
 
 <Meta title="Layout"
   parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
