--- a/starter-kits/tailwind/apps/storybook/patterns/00-foundations/05-scales.mdx
+++ b/starter-kits/tailwind/apps/storybook/patterns/00-foundations/05-scales.mdx
@@ -1,14 +1,12 @@
 import { Meta } from '@storybook/addon-docs';
 import { Spacing } from '@wingsuit-designsystem/storybook';
-const tailwindFile = require('../../config/silo/tailwind.json');
-const spacing = tailwindFile.tailwind.theme.spacing;
-const width = tailwindFile.tailwind.theme.width;
-const height = tailwindFile.tailwind.theme.height;
-const maxWidth = tailwindFile.tailwind.theme.maxWidth;
+export const tailwindFile = require('../../config/silo/tailwind.json');
+export const spacing = tailwindFile.tailwind.theme.spacing;
+export const width = tailwindFile.tailwind.theme.width;
+export const height = tailwindFile.tailwind.theme.height;
+export const maxWidth = tailwindFile.tailwind.theme.maxWidth;
 
-<Meta title="Tokens/Scales"
-parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
-/>
+<Meta title="Foundations/Scales"/>
 
 # Scaling
 
