--- a/starter-kits/tailwind/apps/storybook/patterns/00-foundations/06-typeset.mdx
+++ b/starter-kits/tailwind/apps/storybook/patterns/00-foundations/06-typeset.mdx
@@ -1,21 +1,22 @@
 import { Meta } from '@storybook/addon-docs';
+import { Typeset } from '@wingsuit-designsystem/storybook';
 export const tailwindFile = require('../../config/silo/tailwind.json');
 export const fontFamilies = tailwindFile.tailwind.theme.fontFamily;
 export const intFontSizes = tailwindFile.tailwind.theme.fontSize;
-export const fontSizes = {}
-Object.keys(intFontSizes).forEach((key)=>{
-  fontSizes[key] = [intFontSizes[key][0]]
-})
+export const fontSizes = Object.keys(intFontSizes).map(key=>[intFontSizes[key][0]]) ;
 
-<Meta title="Typography"/>
 
+<Meta title="Foundations/Typography"/>
+
+# Typography
+Choosed typefaces and font sizes
 
 <div>
 {
   Object.keys(fontFamilies).map((key,i)=>{
     return (
       <div key={key}>
-        <Subtitle><b>Font Family:</b> {fontFamilies[key][0]} ({key})</Subtitle>
+        <div><b>Font Family:</b> {fontFamilies[key][0]}</div>
         <Typeset fontFamily={fontFamilies[key][0]} classNamePrefix="text-" fontSizes={fontSizes} />
       </div>
     )
