fix(WS): Accordion, Avatar, hero and header.

--- a/starter-kits/tailwind/apps/storybook/patterns/00-foundations/01-welcome.mdx
+++ b/starter-kits/tailwind/apps/storybook/patterns/00-foundations/01-welcome.mdx
@@ -41,8 +41,8 @@ import './load-patterns';
       parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
 />
 
-<div style={{margin: 'auto', position: 'relative', marginBottom: '40px'}}>
-  <img src="images/background.png" style={{ width: '100%' }}/>
+<div style={{backgroundColor: '#115E59', margin: 'auto', position: 'relative', marginBottom: '40px'}}>
+  <img src="images/background.png" style={{ width: '100%', zIndex: '-2', position: 'relative' }}/>
   <img src="images/logo.svg" style={{margin: 'auto', maxWidth: '400px', position: 'absolute', bottom: 0, top: 0, left: 0, right: 0}}/>
 </div>
 
