fix: Add unique presets test

--- a/docs/apps/storybook/patterns/00-foundations/02-colors.mdx
+++ b/docs/apps/storybook/patterns/00-foundations/02-colors.mdx
@@ -1,16 +1,11 @@
-import { Meta, ColorPalette, ColorItem, Subtitle } from '@storybook/addon-docs/blocks';
-const tailwindFile = require('../../config/silo/tailwind.json');
-const colors = tailwindFile.tailwind.theme.colors;
+import { Meta, ColorPalette, ColorItem } from '@storybook/addon-docs';
+export const tailwindFile = require('../../config/silo/tailwind.json');
+export const colors = tailwindFile.tailwind.theme.colors;
 
-<Meta title="Tokens/Colors"
-parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
-/>
-
+<Meta title="Foundations/Colors" />
 # Colors Matter
 
-<Subtitle>
 Describe your palette of great-looking, well-balanced colors.
-</Subtitle>
 
 <ColorPalette>
   {
