chore: Cleanup vanila starterkits

--- a/starter-kits/vanilla-scss/apps/storybook/patterns/00-base/01-welcome.mdx
+++ b/starter-kits/vanilla-scss/apps/storybook/patterns/00-base/01-welcome.mdx
@@ -5,6 +5,7 @@ import LinkTo from '@storybook/addon-links/react';
 import './images/background.png';
 import './images/ws-tokens.svg';
 import './images/ws-atoms.svg';
+import './images/logo.svg';
 import './images/ws-molecules.svg';
 import './images/ws-organisms.svg';
 import './images/ws-templates.svg';
